--- a/Front/CRUD_Angular/src/app/app.component.html
+++ b/Front/CRUD_Angular/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
   <h3>Gestor de usuarios</h3>
   <!--Mostrando todos los componentes creados-->
-  <router-outlet></router-outlet>
+  <app-navbar></app-navbar>
 </div>
